--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -237,6 +237,7 @@ a:hover .material-symbols-outlined {
   font-size: 14px;
   color: var(--cor-itens);
   margin-bottom: 10px;
+  text-decoration: none;
 }
 .information--service--section>h2{
   font-size: 20px;
@@ -762,5 +763,10 @@ a:hover .material-symbols-outlined {
       justify-content: center;
       width: 100%;
       height: 100%;
+    }
+    .information--service--section>a{
+
+  text-decoration: none;
+  color: var(--cor-itens);
     }
 }
