--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -769,4 +769,38 @@ a:hover .material-symbols-outlined {
   text-decoration: none;
   color: var(--cor-itens);
     }
+    .footer--logo--hors{
+      display: none;
+    }
+    .section--footer{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 400px;
+      width: 100%;
+      gap: 20px;
+    }
+    .footer--information--localizacao{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+    }
+    .questoes--footer--social{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      font-size: 0.8rem;
+      text-decoration: none;
+      color: var(--cor-texto);
+      font-family: "Roboto", sans-serif;
+      margin-bottom: 10px;
+      gap: 5px;
+    }
 }
