--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -781,6 +781,14 @@ a:hover .material-symbols-outlined {
       width: 100%;
       gap: 20px;
     }
+   .container--footer{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+    }
     .footer--information--localizacao{
       display: flex;
       flex-direction: column;
