--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -736,6 +736,8 @@ a:hover .material-symbols-outlined {
   text-decoration: none;
 }
 
+
+
 /* Desktop (col-lg) 992px+ */
 @media (min-width: 992px) {}
 
@@ -743,19 +745,17 @@ a:hover .material-symbols-outlined {
 @media (min-width: 768px) and (max-width: 991px) {}
 
 /* Tablets (col-sm) 576px a 767px */
-@media (min-width: 767px) and (max-width: 767px) {}
+@media (min-width: 576px) and (max-width: 767px) {}
 
 /* Tablets e Celulares (col) 0px a 767px */
 @media (max-width: 767px) {
-
-
   .navbar--menu {
-    display: flexbox;
+    display: flex;
+    /* Corrigido de flexbox para flex */
     height: 50px;
     width: 100%;
     align-items: center;
     justify-content: center;
-
   }
 
   .links--menu>a {
@@ -786,27 +786,24 @@ a:hover .material-symbols-outlined {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-right: 0px;
+    margin-right: 0;
     padding: 20px;
     margin-bottom: 100px;
   }
 
   .informations>h1 {
     font-size: 2.5rem;
-    justify-content: center;
     text-align: center;
   }
 
   .informations>p {
     font-size: 0.8rem;
-    justify-content: center;
     text-align: center;
   }
 
   .button--agendar {
     width: 150px;
     padding: 10px 30px;
-
   }
 
   .section--information {
@@ -821,7 +818,7 @@ a:hover .material-symbols-outlined {
     display: flex;
     font-size: 1.5rem;
     padding: 20px 60px;
-    margin-left: 0px;
+    margin-left: 0;
     justify-content: center;
   }
 
@@ -843,35 +840,116 @@ a:hover .material-symbols-outlined {
   }
 
   .information--service--section>a {
-
     text-decoration: none;
     color: var(--cor-itens);
   }
-  .section--nossa--historia{
+
+  .section--nossa--historia {
     height: 100%;
     width: 100%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
-  .conteiner--section--nossa--historia{
+
+  .conteiner--section--nossa--historia {
     display: flex;
-    height: 100%;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
+    height: 60%;
+    width: 60%;
+    align-items: flex-start;
+    justify-content: flex-start;
     flex-direction: column;
   }
-  .section--nossa--historia--text{
+
+  .section--nossa--historia--text {
     align-items: center;
     justify-content: center;
     text-align: left;
     font-size: 0.8rem;
     line-height: 1.3;
   }
-  .section--nossa--historia--img{
+
+  .section--nossa--historia--img {
     display: none;
   }
+
+  .services--price{
+    height: auto;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .conteiner--imgs-icons{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .conteiner--grids{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0;
+  } 
+  .conteiner--img{
+    width: 100%;
+    height: 200px;
+    margin-right: 0;
+  }
+  
+  .section--story-imgs {
+    height: 250px;
+    width: 100%;
+  }
+ 
+
+  .section--pacotes--descontos {
+    height: auto;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 30px;
+    
+  }
+
+  .promo {
+    flex-direction: column;
+    align-items: center;
+    margin-right: 0;
+    margin-top: 20px;
+  }
+
+  .promo--porcentagem>h2 {
+    font-size: 2.5rem;
+    margin-left: 0;
+  }
+
+  .information--desconto {
+    margin-left: 0;
+    margin-top: 10px;
+    align-items: center;
+  }
+
+  .information--desconto>h2 {
+    font-size: 1.2rem;
+  }
+
+  .information--desconto>p {
+    font-size: 0.9rem;
+    text-align: center;
+    max-width: 90%;
+  }
+
+  .button--black {
+    width: 100%;
+    max-width: 200px;
+    font-size: 1rem;
+  }
+
+
+
 
   .footer--logo--hors {
     display: none;
