--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -368,7 +368,7 @@ a:hover .material-symbols-outlined {
   position: relative;
   width: 100%;
   height: 47vh;
-  background-image: url('../images/imagem1.jpg');
+  background-image: url('../images/imagem1.svg');
   background-size: cover;
   object-fit: cover;
   background-repeat: no-repeat;
@@ -887,7 +887,7 @@ a:hover .material-symbols-outlined {
   }
   .conteiner--grids{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     padding: 20px 0;
