--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-
+  overflow-y: hidden;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,75..100,100..900;1,75..100,100..900&display=swap');
